tests/baselines/reference/overloadGenericFunctionWithRestArgs.errors.txt
overloadGenericFunctionWithRestArgs.ts(2,13): error TS2564: Property 'id' has no initializer and is not definitely assigned in the constructor.
overloadGenericFunctionWithRestArgs.ts(5,5): error TS2564: Property 'GetEnumerator' has no initializer and is not definitely assigned in the constructor.


==== overloadGenericFunctionWithRestArgs.ts (2 errors) ====
    class B<V>{
        private id: V;
                ~~
!!! error TS2564: Property 'id' has no initializer and is not definitely assigned in the constructor.
    }
    class A<U>{
        GetEnumerator: () => B<U>;
        ~~~~~~~~~~~~~
!!! error TS2564: Property 'GetEnumerator' has no initializer and is not definitely assigned in the constructor.
    }
    function Choice<T>(...v_args: T[]): A<T>;
    function Choice<T>(...v_args: T[]): A<T> {
        return new A<T>();
    }